{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 81,
  "lineage": "475c83f8-f599-c58b-7827-47741f6aff58",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "india",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-1",
            "network_security_group_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-india",
            "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-1"
          },
          "dependencies": [
            "module.nsg_india.azurerm_network_security_group.capgemini_nsg",
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_india.azurerm_subnet.capgemini_subnet",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-2",
            "network_security_group_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-india",
            "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-2"
          },
          "dependencies": [
            "module.nsg_india.azurerm_network_security_group.capgemini_nsg",
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_india.azurerm_subnet.capgemini_subnet",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-3",
            "network_security_group_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-india",
            "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-3"
          },
          "dependencies": [
            "module.nsg_india.azurerm_network_security_group.capgemini_nsg",
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_india.azurerm_subnet.capgemini_subnet",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "us",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-1",
            "network_security_group_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-us",
            "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-1"
          },
          "dependencies": [
            "module.nsg_us.azurerm_network_security_group.capgemini_nsg",
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_us.azurerm_subnet.capgemini_subnet",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-2",
            "network_security_group_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-us",
            "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-2"
          },
          "dependencies": [
            "module.nsg_us.azurerm_network_security_group.capgemini_nsg",
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_us.azurerm_subnet.capgemini_subnet",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-3",
            "network_security_group_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-us",
            "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-3"
          },
          "dependencies": [
            "module.nsg_us.azurerm_network_security_group.capgemini_nsg",
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_us.azurerm_subnet.capgemini_subnet",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_india",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "capgemini_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-india",
            "location": "centralindia",
            "name": "nsg-india",
            "resource_group_name": "Capgemini_Azure",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_us",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "capgemini_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkSecurityGroups/nsg-us",
            "location": "centralus",
            "name": "nsg-us",
            "resource_group_name": "Capgemini_Azure",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering_a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/virtualNetworkPeerings/peer-a-to-b",
            "name": "peer-a-to-b",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us",
            "resource_group_name": "Capgemini_Azure",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-india"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering_b_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/virtualNetworkPeerings/peer-b-to-a",
            "name": "peer-b-to-a",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india",
            "resource_group_name": "Capgemini_Azure",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-us"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_india",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "capgemini_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-1",
            "name": "vnet-india-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Capgemini_Azure",
            "virtual_network_name": "vnet-india"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.16.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-2",
            "name": "vnet-india-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Capgemini_Azure",
            "virtual_network_name": "vnet-india"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.32.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-3",
            "name": "vnet-india-subnet-3",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Capgemini_Azure",
            "virtual_network_name": "vnet-india"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_us",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "capgemini_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-1",
            "name": "vnet-us-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Capgemini_Azure",
            "virtual_network_name": "vnet-us"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.16.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-2",
            "name": "vnet-us-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Capgemini_Azure",
            "virtual_network_name": "vnet-us"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.32.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-3",
            "name": "vnet-us-subnet-3",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Capgemini_Azure",
            "virtual_network_name": "vnet-us"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_india",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "capgemini_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkInterfaces/vm-india-nic",
            "internal_domain_name_suffix": "jdosvkb0wi1etfilfahekfwszh.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/publicIPAddresses/vm-india-public-ip",
                "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india/subnets/vnet-india-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "vm-india-nic",
            "private_ip_address": "192.168.0.4",
            "private_ip_addresses": [
              "192.168.0.4"
            ],
            "resource_group_name": "Capgemini_Azure"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_india.azurerm_subnet.capgemini_subnet",
            "module.vm_india.azurerm_public_ip.capgemini_public",
            "module.vnet_india.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_india",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "capgemini_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/publicIPAddresses/vm-india-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.197.3.21",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "vm-india-public-ip",
            "resource_group_name": "Capgemini_Azure",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm_us",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "capgemini_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/networkInterfaces/vm-us-nic",
            "internal_domain_name_suffix": "uhlzadvb3aeevbmjnm3dstupnf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/publicIPAddresses/vm-us-public-ip",
                "subnet_id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us/subnets/vnet-us-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "vm-us-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Capgemini_Azure"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg",
            "module.subnet_us.azurerm_subnet.capgemini_subnet",
            "module.vm_us.azurerm_public_ip.capgemini_public",
            "module.vnet_us.azurerm_virtual_network.capgemini_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_us",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "capgemini_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/publicIPAddresses/vm-us-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.46.224.76",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vm-us-public-ip",
            "resource_group_name": "Capgemini_Azure",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_india",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "capgemini_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a82add48-b23a-4936-950b-280e4516d2cf",
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-india",
            "location": "centralindia",
            "name": "vnet-india",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Capgemini_Azure"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_us",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "capgemini_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0e90d7a1-e8a1-4a08-8589-6b3a394e8f6d",
            "id": "/subscriptions/47f636c5-a7d0-455d-9a44-99c27e48c084/resourceGroups/Capgemini_Azure/providers/Microsoft.Network/virtualNetworks/vnet-us",
            "location": "centralus",
            "name": "vnet-us",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Capgemini_Azure"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.capgemini_rg"
          ]
        }
      ]
    }
  ]
}